# my-chess-style

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.frontend  README.md  celery_entry.sh  docker-compose.yml  manage.py  openapi.json  pyproject.toml  requirements.txt  web_entry.sh
.github/workflows/: pr.yml  test.yml
deployment/: namespace.yaml  postgres.yaml  redis.yaml
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  main.ts
frontend/src/assets/: base.css  main.css
frontend/src/components/: HelloWorld.vue  HomeCardWithOptions.vue  StatusCardWithBasicInformation.vue  StatusCardWithGamesAnalysis.vue  StatusCardWithRoast.vue
frontend/src/components/__tests__/: HomeCardWithOptions.spec.ts
frontend/src/router/: index.ts
frontend/src/stores/: ui.ts
frontend/src/types/: index.ts
frontend/src/views/: HomeView.vue  StatusView.vue
frontend/src/volt/: Card.vue  ProgressBar.vue  ToggleSwitch.vue
my_chess_style/: asgi.py  celery.py  urls.py  wsgi.py
my_chess_style/settings/: base.py  dev.py  production.py
nginx/: default.conf
notebooks/: Diabetes Patients analysis.ipynb  KNN_implementation.ipynb  Learning ML.ipynb  Pokemon.csv  Seaborn Tutorial.ipynb
observability/prometheus/: prometheus.yml
openapi/: openapi.json
style_predictor/: apps.py  constants.py  models.py  roasts.py  schemas.py  tasks.py  utils.py
style_predictor/apis/: __init__.py  base_model.py
style_predictor/apis/analysis/: api.py  models.py
style_predictor/apis/pgn/: api.py  models.py  utils.py
style_predictor/management/commands/: generate_openapi.py  import_chess_openings.py
style_predictor/migrations/: 0001_initial.py  0002_initial.py  0003_taskresult.py  0004_taskresult_session_id.py  0005_taskresult_stage.py  0006_alter_taskresult_stage.py  0007_alter_taskresult_stage.py  0008_alter_taskresult_result.py  0009_pgnfileupload_source.py  0010_alter_taskresult_result.py  0011_drop_hstore_extension.py  0012_chessopening.py  0013_roastregister.py  0014_alter_taskresult_stage.py
style_predictor/pgn_parser/file_processing/: lexer.py  parser.py
style_predictor/pgn_parser/file_processing/tests/: test_lexer.py  test_parser.py
style_predictor/pgn_parser/game/: __init__.py  game.py
style_predictor/pgn_parser/game/tests/: test_game.py
style_predictor/tests/: test_utils.py
