[project]
name = "my-chess-style"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "celery>=5.5.0",
  "django>=5.2",
  "django-ninja>=1.4.0",
  "matplotlib>=3.10.1",
  "numpy>=2.2.4",
  "pandas>=2.2.3",
  "psycopg2>=2.9.10",
  "python-dotenv>=1.1.0",
  "scikit-learn>=1.6.1",
  "scipy>=1.15.2",
  "stockfish",
]

[dependency-groups]
commit = [
    "pre-commit>=4.2.0",
]
dev = [
    "django-stubs>=5.1.3",
    "django-types>=0.20.0",
    "flower>=2.0.1",
    "ipython>=9.1.0",
    "jupyterlab>=4.4.0",
    "mglearn>=0.2.0",
    "notebook>=7.4.0",
    "pytest>=8.3.5",
    "ruff>=0.11.3",
    "seaborn>=0.13.2",
    "voila>=0.5.8",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']

[tool.basedpyright]
venvPath = "./"
venv = ".venv"

[tool.uv.sources]
stockfish = { git = "https://github.com/py-stockfish/stockfish", rev = "master" }
